# nano-ros

./: .envrc  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  justfile  west.yml  zephyr-workspace
.config/: nextest.toml
crates/nano-ros/: Cargo.toml
crates/nano-ros-core/: Cargo.toml
crates/nano-ros-core/src/: action.rs  clock.rs  error.rs  lib.rs  service.rs  time.rs  types.rs
crates/nano-ros-cpp/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  build.rs
crates/nano-ros-cpp/cmake/: nano_ros_cpp-config.cmake.in  nano_ros_generate_interfaces.cmake
crates/nano-ros-cpp/cpp/: embedded.cpp  init.cpp
crates/nano-ros-cpp/examples/: hello.cpp
crates/nano-ros-cpp/include/builtin_interfaces/msg/: duration.hpp  time.hpp
crates/nano-ros-cpp/include/nano_ros/: cdr.hpp  clock.hpp  context.hpp  duration.hpp  executor.hpp  nano_ros.hpp  node.hpp  node_options.hpp  publisher.hpp  qos.hpp  service.hpp  subscription.hpp  time.hpp  version.hpp
crates/nano-ros-cpp/include/nano_ros/embedded/: cdr.hpp  node.hpp  types.hpp
crates/nano-ros-cpp/include/std_msgs/msg/: bool.hpp  float32.hpp  float64.hpp  header.hpp  int16.hpp  int32.hpp  int64.hpp  int8.hpp  string.hpp  uint16.hpp  uint32.hpp  uint64.hpp  uint8.hpp
crates/nano-ros-cpp/msg/std_msgs/: Header.msg
crates/nano-ros-cpp/scripts/: nano_ros_generate_cpp.py
crates/nano-ros-cpp/src/: lib.rs
crates/nano-ros-macros/: Cargo.toml
crates/nano-ros-macros/src/: lib.rs
crates/nano-ros-node/: Cargo.toml
crates/nano-ros-node/src/: connected.rs  context.rs  executor.rs  lib.rs  node.rs  options.rs  publisher.rs  rtic.rs  shim.rs  subscriber.rs  timer.rs
crates/nano-ros-node/tests/: rtic_integration.rs
crates/nano-ros-params/: Cargo.toml
crates/nano-ros-params/src/: lib.rs  server.rs  typed.rs  types.rs
crates/nano-ros-serdes/: Cargo.toml
crates/nano-ros-tests/: Cargo.toml
crates/nano-ros-tests/src/: lib.rs  process.rs  zephyr.rs
crates/nano-ros-tests/src/fixtures/: binaries.rs  mod.rs  qemu.rs  ros2.rs  zenohd_fixture.rs
crates/nano-ros-tests/tests/: emulator.rs  nano2nano.rs  platform.rs  rmw_interop.rs  zephyr.rs
crates/nano-ros-transport/: Cargo.toml
crates/nano-ros-transport/src/: lib.rs  shim.rs  sync.rs  traits.rs  zenoh.rs
crates/nano-ros-transport/tests/: rtic_integration.rs  zenoh_integration.rs
crates/nano-ros-types/: Cargo.toml
crates/nano-ros-types/src/: builtin_interfaces.rs  example_interfaces.rs  geometry_msgs.rs  lib.rs  std_msgs.rs
crates/nano-ros/src/: lib.rs
crates/zenoh-pico/: Cargo.toml
crates/zenoh-pico-shim/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/zenoh-pico-shim-sys/: Cargo.toml  build.rs  cbindgen.toml
crates/zenoh-pico-shim-sys/c/include/: zenoh_shim.h
crates/zenoh-pico-shim-sys/c/platform_smoltcp/: network.c  zenoh_generic_platform.h
crates/zenoh-pico-shim-sys/c/shim/: zenoh_shim.c
crates/zenoh-pico-shim-sys/src/: ffi.rs  lib.rs  platform_smoltcp.rs
crates/zenoh-pico-shim/include/: zenoh_shim.h  zenoh_shim_platform.h
crates/zenoh-pico-shim/platform_smoltcp/: mod.rs  system.c  zenoh_generic_config.h  zenoh_smoltcp_platform.h
crates/zenoh-pico-shim/shim/: backend_posix.c  backend_smoltcp.c  backend_zephyr.c  zenoh_shim.c
crates/zenoh-pico-shim/src/: ffi.rs  lib.rs
crates/zenoh-pico-shim/tests/: integration.rs
crates/zenoh-pico-sys/: Cargo.toml  build.rs  wrapper.h
crates/zenoh-pico-sys/src/: lib.rs
crates/zenoh-pico/examples/: sub_test.rs
crates/zenoh-pico/src/: config.rs  error.rs  keyexpr.rs  lib.rs  liveliness.rs  publisher.rs  queryable.rs  serializer.rs  session.rs  subscriber.rs
crates/zenoh-pico/tests/: integration.rs
crates/zenoh-pico/tests/common/: mod.rs
docs/: api-comparison-rclrs.md  embedded-integration.md  memory-requirements.md  message-generation.md  nano-ros-realtime-design.md  realtime-lint-guide.md  rmw_zenoh_interop.md  rtic-integration-design.md  schedulability-analysis.md  wcet-analysis.md  zephyr-setup.md
docs/architecture/: modular-c-shim-design.md  smoltcp-zenoh-pico-integration.md  unified-executor-design.md
docs/roadmap/: phase-1-foundation.md  phase-10-cpp-bindings.md  phase-11-c-api.md  phase-2-zephyr-qemu.md  phase-3-services-params.md  phase-4-message-generation.md  phase-6-actions.md  (+4 more)
examples/cpp-talker/: CMakeLists.txt
examples/cpp-talker/src/: main.cpp
examples/embassy-stm32f4/: Cargo.toml
examples/embassy-stm32f4/src/: main.rs
examples/embedded-cpp-listener/: CMakeLists.txt
examples/embedded-cpp-listener/src/: main.cpp
examples/native-cpp-custom-msg/: CMakeLists.txt
examples/native-cpp-custom-msg/src/: main.cpp
examples/native-listener/: Cargo.toml  package.xml
examples/native-listener/.cargo/: config.toml
examples/native-listener/src/: main.rs
examples/native-rs-action-server/: Cargo.toml  package.xml
examples/native-rs-action-server/src/: main.rs
examples/native-rs-custom-msg/: Cargo.toml  justfile  package.xml
examples/native-rs-custom-msg/src/: main.rs
examples/native-rs-listener/: Cargo.toml  justfile
examples/native-rs-listener/src/: main.rs
examples/native-service-client/: Cargo.toml
examples/native-service-client/src/: main.rs
examples/native-talker/: Cargo.toml  justfile  package.xml
examples/native-talker/src/: main.rs
examples/qemu-rs-test/: Cargo.toml  build.rs  memory.x
examples/qemu-rs-test/src/: main.rs
examples/qemu-test/: Cargo.toml  build.rs  package.xml
examples/qemu-test/.cargo/: config.toml
examples/qemu-test/src/: main.rs
examples/ros2-cpp-service-client/: CMakeLists.txt
examples/ros2-cpp-service-client/src/: main.cpp
scripts/: README.md  cleanup-zephyr-test.sh  run-multi-node-test.sh  setup-qemu-network.sh  teardown-qemu-network.sh  test-pubsub-peer.sh  test-pubsub.sh  test-zenoh-communication.sh  test-zenoh-detailed.sh  test-zenoh-e2e.sh  test-zenoh-pico.sh  test-zenoh-simple.sh
templates/: README.md  cargo-embassy-stm32f4.toml  cargo-polling-stm32f4.toml  cargo-rtic-stm32f4.toml  cargo-zephyr.toml
tests/: README.md  run-all.sh  rust-tests.sh
zephyr/: module.yml  setup.sh
(+171 files in other folders)
