[workspace]
resolver = "2"

members = [
    "crates/nano-ros",
    "crates/nano-ros-core",
    "crates/nano-ros-serdes",
    "crates/nano-ros-macros",
    "crates/nano-ros-params",
    "crates/nano-ros-transport",
    "crates/nano-ros-node",
    # zenoh-pico shim for cross-platform support (POSIX, Zephyr, smoltcp)
    "crates/zenoh-pico-shim-sys",
    "crates/zenoh-pico-shim",
    # Integration tests
    "crates/nano-ros-tests",
]

# Examples are excluded from workspace - they are standalone packages
# that generate their own bindings via `cargo nano-ros generate`
# nano-ros-cpp is excluded because it's built via CMake/Corrosion
exclude = [
    "crates/nano-ros-cpp",
    "examples/zephyr-rs-talker",
    "examples/zephyr-rs-listener",
    "examples/qemu-rs-test",
    "examples/native-rs-talker",
    "examples/native-rs-listener",
    "examples/native-rs-custom-msg",
    "examples/native-rs-service-server",
    "examples/native-rs-service-client",
    "examples/native-rs-action-server",
    "examples/native-rs-action-client",
    "examples/stm32f4-rs-rtic",
    "examples/stm32f4-rs-embassy",
    "examples/stm32f4-rs-polling",
    "examples/stm32f4-rs-smoltcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/nano-ros"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates (default-features = false for no_std flexibility)
nano-ros-core = { path = "crates/nano-ros-core", default-features = false }
nano-ros-serdes = { path = "crates/nano-ros-serdes", default-features = false }
nano-ros-macros = { path = "crates/nano-ros-macros" }
nano-ros-params = { path = "crates/nano-ros-params", default-features = false }
nano-ros-transport = { path = "crates/nano-ros-transport", default-features = false }
nano-ros-node = { path = "crates/nano-ros-node", default-features = false }

# no_std compatible
heapless = "0.8"
embedded-io = "0.6"

# Serialization
byteorder = { version = "1.5", default-features = false }

# Proc macros
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Optional std dependencies
thiserror = "1"

# Embedded runtime (QEMU testing)
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-semihosting = { version = "0.6", features = ["exit"] }
panic-halt = "1.0"
qemu-exit = "3.0"

# Logging
log = { version = "0.4", default-features = false }
env_logger = "0.11"

# Embedded logging
defmt = "0.3"
defmt-rtt = "0.4"

# FFI / C interop
cty = "0.2"

[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary, no unwinding

[profile.dev]
opt-level = 1        # Some optimization even in dev for embedded
