[package]
name = "nano-ros-cpp-bridge"
version = "0.1.0"
edition = "2021"
description = "C++ bindings for nano-ros via cxx"
license = "Apache-2.0"
publish = false

# Build as static library for linking with C++
[lib]
crate-type = ["staticlib"]

[features]
# Default: desktop build with std and zenoh
default = ["std", "zenoh"]

# Standard library support (desktop platforms)
std = ["nano-ros/std", "alloc"]

# Heap allocation (required for most functionality)
alloc = ["nano-ros/alloc"]

# Transport backends (select one)
zenoh = ["nano-ros/zenoh", "std"]           # Desktop: zenoh-pico POSIX (requires std)
shim-zephyr = ["nano-ros/shim-zephyr"]      # Zephyr RTOS
shim-smoltcp = ["nano-ros/shim-smoltcp"]    # Bare-metal with smoltcp

# Executor modes for embedded
rtic = ["nano-ros/rtic"]
polling = ["nano-ros/polling"]

[dependencies]
cxx = { version = "1.0", default-features = false, features = ["alloc"] }
nano-ros = { path = "../nano-ros", default-features = false }
nano-ros-serdes = { path = "../nano-ros-serdes", default-features = false }

[build-dependencies]
cxx-build = "1.0"
