[package]
name = "nano-ros-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Node abstraction for nano-ros"

[features]
default = ["std"]
std = ["nano-ros-core/std", "nano-ros-serdes/std", "nano-ros-transport/std", "log"]
alloc = ["nano-ros-core/alloc", "nano-ros-serdes/alloc"]
zenoh = ["nano-ros-transport/zenoh", "alloc"]
log = ["dep:log"]
defmt = ["dep:defmt"]

# Executor support
rtic = ["nano-ros-transport/rtic"]    # RTIC executor - no background threads
polling = ["nano-ros-transport/polling"]  # Manual polling mode

[dependencies]
nano-ros-core = { workspace = true, default-features = false }
nano-ros-serdes = { workspace = true, default-features = false }
nano-ros-transport = { workspace = true, default-features = false }
heapless = { workspace = true }
log = { workspace = true, optional = true }
defmt = { workspace = true, optional = true }
