[package]
name = "nano-ros-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Node abstraction for nano-ros"

[features]
default = ["std"]
std = ["nano-ros-core/std", "nano-ros-transport/std", "log"]
alloc = ["nano-ros-core/alloc"]
zenoh = ["nano-ros-transport/zenoh", "alloc"]
log = ["dep:log"]

# Shim transport backend (for embedded platforms without full zenoh features)
# Select one platform: shim-posix (desktop), shim-zephyr, or shim-smoltcp (bare-metal)
shim = ["nano-ros-transport/shim"]  # Base shim feature
shim-posix = ["shim", "nano-ros-transport/shim-posix"]  # POSIX platform (desktop testing)
shim-zephyr = ["shim", "nano-ros-transport/shim-zephyr"]  # Zephyr RTOS platform
shim-smoltcp = ["shim", "nano-ros-transport/shim-smoltcp"]  # smoltcp platform (bare-metal)

# Executor support
rtic = ["nano-ros-transport/rtic"]    # RTIC executor - no background threads
polling = ["nano-ros-transport/polling"]  # Manual polling mode
async = ["dep:futures"]

[dependencies]
nano-ros-core = { workspace = true, default-features = false }
nano-ros-transport = { workspace = true, default-features = false }
nano-ros-params = { workspace = true, default-features = false }
heapless = { workspace = true }
log = { workspace = true, optional = true }
futures = { version = "0.3", optional = true, default-features = false, features = ["alloc"] }
