[package]
name = "nano-ros-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Transport abstraction layer for nano-ros"

[features]
default = ["std"]
std = ["nano-ros-core/std"]
alloc = ["nano-ros-core/alloc"]
zenoh = []  # Enable zenoh-pico backend

[dependencies]
nano-ros-core = { workspace = true, default-features = false }
heapless = { workspace = true }
