[package]
name = "nano-ros-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Transport abstraction layer for nano-ros"

[features]
default = ["std"]
std = ["nano-ros-core/std", "zenoh-pico?/std", "log"]
alloc = ["nano-ros-core/alloc"]

# Transport backend
zenoh = ["dep:zenoh-pico", "alloc"]  # Enable zenoh-pico backend (requires alloc for callback buffers)

# Shim transport backend (for embedded platforms)
# Select one platform: shim-posix (desktop), shim-zephyr, or shim-smoltcp (bare-metal)
shim = ["dep:zenoh-pico-shim"]  # Base shim feature (requires platform selection)
shim-posix = ["shim", "zenoh-pico-shim/posix"]  # POSIX platform (desktop testing)
shim-zephyr = ["shim", "zenoh-pico-shim/zephyr"]  # Zephyr RTOS platform
shim-smoltcp = ["shim", "zenoh-pico-shim/smoltcp"]  # smoltcp platform (bare-metal)

# Executor backends (informational - affects sync primitive choice)
rtic = []       # RTIC executor - uses critical sections, no background threads
embassy = []    # Embassy executor - uses embassy-sync primitives
polling = []    # Simple polling mode - no background threads, manual poll required

# Synchronization backends (mutually exclusive for mutex implementation)
# Default: spin::Mutex (works everywhere, but not RTIC-compatible)
sync-spin = ["dep:spin"]
# Critical section: uses cortex_m::interrupt::free (RTIC-compatible)
sync-critical-section = ["dep:critical-section"]
# Portable atomic: uses portable-atomic for broader platform support
sync-portable-atomic = ["dep:portable-atomic"]

# Logging
log = ["dep:log"]
defmt = ["dep:defmt"]

[dependencies]
nano-ros-core = { workspace = true, default-features = false }
heapless = { workspace = true }
zenoh-pico = { path = "../zenoh-pico", optional = true, default-features = false }
zenoh-pico-shim = { path = "../zenoh-pico-shim", optional = true, default-features = false }

# Synchronization backends (optional)
spin = { version = "0.9", optional = true, default-features = false, features = ["mutex", "spin_mutex"] }
critical-section = { version = "1.1", optional = true }
portable-atomic = { version = "1.6", optional = true, default-features = false }

# Logging
log = { workspace = true, optional = true }
defmt = { workspace = true, optional = true }
