[package]
name = "nano-ros-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standard ROS message types for nano-ros"

[features]
default = ["std"]
std = ["nano-ros-core/std"]
alloc = ["nano-ros-core/alloc"]

[dependencies]
nano-ros-core = { workspace = true, default-features = false }
nano-ros-serdes = { workspace = true, default-features = false }
nano-ros-macros = { workspace = true }
heapless = { workspace = true }
