[package]
name = "nano-ros"
version = "0.1.0"
edition = "2021"
description = "Unified ROS 2 client library for embedded systems"
license = "Apache-2.0"
keywords = ["ros", "ros2", "embedded", "no_std"]
categories = ["embedded", "no-std", "robotics"]

[features]
default = ["std", "zenoh"]
std = [
    "nano-ros-core/std",
    "nano-ros-serdes/std",
    "nano-ros-node/std",
    "nano-ros-transport/std",
    "nano-ros-params/std",
]
alloc = [
    "nano-ros-core/alloc",
    "nano-ros-serdes/alloc",
    "nano-ros-node/alloc",
    "nano-ros-transport/alloc",
    "nano-ros-params/alloc",
]
zenoh = [
    "nano-ros-node/zenoh",
    "nano-ros-transport/zenoh",
]

[dependencies]
# Core functionality
nano-ros-core = { path = "../nano-ros-core" }
nano-ros-serdes = { path = "../nano-ros-serdes" }
nano-ros-macros = { path = "../nano-ros-macros" }
nano-ros-node = { path = "../nano-ros-node" }
nano-ros-transport = { path = "../nano-ros-transport" }
nano-ros-params = { path = "../nano-ros-params" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
