[package]
name = "zenoh-pico-shim"
version = "0.1.0"
edition = "2021"
description = "High-level C shim for zenoh-pico with platform backends"
license = "Apache-2.0"
readme = "README.md"

[lints.rust]
# cbindgen sets cfg(cbindgen) when parsing - allow it without warnings
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(cbindgen)'] }

[features]
default = []
# Platform backends (mutually exclusive)
posix = ["zenoh-pico-sys"]
zephyr = ["zenoh-pico-sys"]
smoltcp = ["zenoh-pico-sys"]
# Standard library support
std = []

[dependencies]
# zenoh-pico FFI bindings - provides linkage to zenoh-pico C library
zenoh-pico-sys = { path = "../zenoh-pico-sys", optional = true }

[build-dependencies]
cbindgen = "0.29.2"
cc = "1.0"

[dev-dependencies]

[lib]
# Only rlib - staticlib requires panic_handler which is platform-specific
# The C shim is compiled via cc and linked automatically
crate-type = ["rlib"]
