[package]
name = "zenoh-pico-shim"
version = "0.1.0"
edition = "2021"
description = "High-level C shim for zenoh-pico with platform backends"
license = "Apache-2.0"
readme = "README.md"

[features]
default = []
# Platform backends (mutually exclusive)
posix = ["zenoh-pico-shim-sys/posix"]
zephyr = ["zenoh-pico-shim-sys/zephyr"]
smoltcp = ["zenoh-pico-shim-sys/smoltcp"]
# Standard library support
std = ["zenoh-pico-shim-sys/std"]

[dependencies]
# FFI bindings + C shim library
zenoh-pico-shim-sys = { path = "../zenoh-pico-shim-sys" }

[dev-dependencies]

[lib]
# Only rlib - staticlib requires panic_handler which is platform-specific
# The C shim is compiled via cc and linked automatically
crate-type = ["rlib"]
