[package]
name = "zenoh-pico"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe Rust bindings for zenoh-pico"

[lib]
name = "zenoh_pico"

[dependencies]
zenoh-pico-sys = { path = "../zenoh-pico-sys" }
cty = { workspace = true }
heapless = { workspace = true }

[dev-dependencies]
libc = "0.2"

[features]
default = ["std"]
std = ["zenoh-pico-sys/std"]
